--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.15", features = ["derive"] }
 eyre = "0.6.5"
-reqwest = "0.11.12"
+reqwest = {version = "0.11.12", features = ["blocking"]}
 ethers = "0.17.0"
+serde_json = "1.0.86"
